--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,8 @@
     This CSP allows any SSL-enabled host and for arbitrary eval(), but you should limit these directives further to increase your app's security.
     Learn more about CSP policies at https://content-security-policy.com/#directive
   -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
   <!-- More info at https://github.com/joeldenning/import-map-overrides/blob/master/docs/configuration.md#domain-list -->
@@ -32,7 +34,9 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js"
+        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+         "react": "https://cdn.jsdelivr.net/npm/react@16.13.1/umd/react.production.min.js",
+         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js"
       }
     }
   </script>
@@ -45,7 +49,9 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@nitinreddy3/root-config": "//localhost:9000/nitinreddy3-root-config.js"
+        "@nitinreddy3/root-config": "//localhost:9000/nitinreddy3-root-config.js",
+        "@nitinreddy3/react-app": "//localhost:8080/nitinreddy3-react-app.js",
+        "angular-app": "//localhost:4200/main.js"
       }
     }
   </script>
@@ -66,11 +72,62 @@
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
   <% } %>
 </head>
+
 <body>
-  <main></main>
+  <style>
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: #111D4A;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      width: 100%;
+      height: 75px;
+      display: flex;
+      align-items: center;
+    }
+
+    .navbar ul {
+      display: flex;
+      align-items: center;
+      list-style-type: none;
+      height: 100%;
+    }
+
+    .navbar li {
+      padding-right: 24px;
+      height: 100%;
+    }
+
+    .navbar li:hover {
+      opacity: 0.8;
+    }
+
+    .navbar a {
+      text-decoration: none;
+      color: white;
+    }
+  </style>
+  <div class="navbar">
+    <ul>
+      <a onclick="singleSpaNavigate('/react')">
+        <li>
+          React
+        </li>
+      </a>
+      <a onclick="singleSpaNavigate('/angular')">
+        <li>
+          Angular
+        </li>
+      </a>
+    </ul>
+  </div>
   <script>
     System.import('@nitinreddy3/root-config');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
+
 </html>
